# MacroCount

./: .gitignore  CMakeLists.txt  README.md
images/: apple_red.icns
include/: addentrywidget.h  addfoodwidget.h  database.h  entrytable.h  food.h  foodtable.h  item.h  itemtable.h  mainwindow.h
src/: addentrywidget.cpp  addentrywidget.ui  addfoodwidget.cpp  addfoodwidget.ui  database.cpp  entrytable.cpp  foodtable.cpp  itemtable.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
